--- a/src/pages/message/message.css
+++ b/src/pages/message/message.css
@@ -99,15 +99,15 @@
     color: rgb(115, 115, 115);
 }
 
-.main_msg::-webkit-scrollbar {
-    width: 5px;
+.scroll_box::-webkit-scrollbar {
+    width: 8px;
 }
 
-.main_msg::-webkit-scrollbar-track {
+.scroll_box::-webkit-scrollbar-track {
     background: #f1f1f1; 
-  }
+}
 
-.main_msg::-webkit-scrollbar-thumb {
+.scroll_box::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #888;
 }
@@ -115,7 +115,10 @@
 .main_msg{
     padding: 30px;
     margin: 5px;
-    height: 680px;
+}
+
+.scroll_box{
+    height: 700px;
     overflow-y: scroll;
 }
 
@@ -150,6 +153,20 @@
     margin: 10px 0;
 }
 
+.msg_side_box{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.msg_side_box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
 .msg_footer{
     width: 100%;
     position: absolute;
@@ -171,7 +188,7 @@
     justify-content: space-between;
 }
 
-.msg_footer input{
+.msg_footer .input_box{
     width: 90%;
     border: none;
     outline: 0;
@@ -221,4 +238,10 @@
 
 .all_emoji svg:hover{
     background: #f3f1f1;
+}
+
+.emoji_wrapper{
+    position: absolute;
+    bottom: 80px;
+    right: 30px;
 }
